<resources>
    <string name="app_name">文件浏览器</string>
    <string name="app_workspace">工作目录</string>

    <string name="action_search">搜索</string>
    <string name="action_create">新建</string>
    <string name="action_refresh">刷新</string>

    <string name="action_pdf">北极星Office</string>
    <string name="action_png">涂画</string>
    <string name="action_png_write">MetaMoji</string>

    <string name="nav_setting">设置</string>
    <string name="nav_local">本地</string>
    <string name="nav_local_work">工作目录</string>
    <string name="nav_local_main">主目录</string>
    <string name="nav_local_root">根目录</string>
    <string name="nav_local_storage">内置存储</string>
    <string name="nav_local_sdcard">SD卡</string>
    <string name="nav_local_download">下载</string>
    <string name="nav_repository">库</string>
    <string name="nav_repository_picture">图片</string>
    <string name="nav_repository_music">音乐</string>
    <string name="nav_repository_video">视频</string>
    <string name="nav_repository_document">文档</string>
    <string name="nav_repository_application">应用</string>
    <string name="nav_repository_compress">压缩管理</string>
    <string name="nav_network">网络</string>
    <string name="nav_network_bluetooth">蓝牙</string>
    <string name="nav_network_network">局域网</string>
    <string name="nav_web">网页</string>

    <string name="file_copy">复制</string>
    <string name="file_cut">剪切</string>
    <string name="file_delete">删除</string>
    <string name="file_rename">重命名</string>
    <string name="file_more">更多</string>
    <string name="file_paste">粘贴</string>
    <string name="file_new">新建</string>
    <string name="file_cancel">取消</string>

    <string name="file_none">文件夹为空</string>

    <string name="type_txt">文本</string>
    <string name="type_audio">音频</string>
    <string name="type_video">视频</string>
    <string name="type_image">图片</string>
    <string name="type_other">其他</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_name_icon_size">icon_size_list</string>
    <string name="pref_name_sort_time">time_sort_list</string>
    <string name="pref_name_sort_size">size_sort_list</string>
    <string name="pref_name_sort_name">name_sort_list</string>
    <string name="pref_name_switch_file_hide">hide_switch</string>

    <string name="pref_header_display">显示设置</string>
    <string name="pref_title_hide_file">显示隐藏文件</string>
    <string name="pref_description_social_recommendations">系统的隐藏文件和文件夹会被显示</string>

    <string name="pref_title_icon_size">文件图标</string>
    <string-array name="pref_display_list_icon">
        <item>大</item>
        <item>中</item>
        <item>小</item>
    </string-array>
    <string-array name="pref_display_list_values_icon">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sort_time">按时间排序</string>
    <string name="pref_title_sort_size">按大小排序</string>
    <string name="pref_title_sort_name">按名称排序</string>
    <string-array name="pref_sort_list">
        <item>升序</item>
        <item>降序</item>
    </string-array>
    <string-array name="pref_sort_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_header_about">关于</string>
    <string name="pref_title_system_version">版本</string>
    <string name="pref_header_sort">文件排序</string>
    <string name="pref_ringtone_silent">Silent</string>

</resources>
