<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/pref_header_display">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_name_switch_file_hide"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_hide_file" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_display_list_icon"
            android:entryValues="@array/pref_display_list_values_icon"
            android:key="@string/pref_name_icon_size"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_icon_size" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/pref_header_sort">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_sort_list"
            android:entryValues="@array/pref_sort_list_values"
            android:key="@string/pref_name_sort_time"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sort_time" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_sort_list"
            android:entryValues="@array/pref_sort_list_values"
            android:key="@string/pref_name_sort_name"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sort_name" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/pref_header_about">
        <Preference
            android:summary="1.3"
            android:title="@string/pref_title_system_version"></Preference>

    </PreferenceCategory>
</PreferenceScreen>