<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:icon="@drawable/ic_show_chart_black_18dp"
        android:title="@string/pref_header_display">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_name_switch_file_hide"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_hide_file" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_display_list_icon"
            android:entryValues="@array/pref_display_list_values_icon"
            android:key="@string/pref_name_icon_size"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_icon_size" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_sort_by_alpha_black_18dp"
        android:title="@string/pref_header_sort">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_sort_list"
            android:entryValues="@array/pref_sort_list_values"
            android:key="@string/pref_name_sort_time"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sort_time" />
        <!--<ListPreference-->
        <!--android:defaultValue="1"-->
        <!--android:entries="@array/pref_sort_list"-->
        <!--android:entryValues="@array/pref_sort_list_values"-->
        <!--android:key="@string/pref_name_sort_size"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sort_size" />-->
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_sort_list"
            android:entryValues="@array/pref_sort_list_values"
            android:key="@string/pref_name_sort_name"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sort_name" />

    </PreferenceCategory>


    <PreferenceCategory
        android:icon="@drawable/ic_info_black_18dp"
        android:title="@string/pref_header_about">
        <Preference
            android:summary="1.3"
            android:title="@string/pref_title_system_version"></Preference>

    </PreferenceCategory>


</PreferenceScreen>