<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/setting_navigation_menu_item"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_setting">
    </item>

    <item
        android:id="@+id/web_navigation_menu_item"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_web"></item>

    <item
        android:id="@+id/local_navigation_menu_item"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_local">
        <menu>
            <item
                android:id="@+id/main_local_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_local_main"></item>
            <item
                android:id="@+id/root_local_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_local_root"></item>
            <item
                android:id="@+id/download_local_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_local_download"></item>
            <item
                android:id="@+id/storage_local_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_local_storage"></item>
            <item
                android:id="@+id/sdcard_local_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_local_sdcard"></item>
        </menu>
    </item>
    <item
        android:id="@+id/network_navigation_menu_item"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/nav_network">
        <menu>
            <item
                android:id="@+id/bluetooth_network_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_network_bluetooth"></item>
            <item
                android:id="@+id/network_network_navigation_menu_item"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_network_network"></item>
        </menu>
    </item>

</menu>
