<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corner"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="打开为"
        android:alpha="0.8"
        android:textSize="18sp"
        android:textColor="@color/grey_900" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_dialog_type_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/type_txt"
        android:textColor="@color/grey_500"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_dialog_type_audio"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/type_audio"
        android:textColor="@color/grey_500"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_dialog_type_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/type_video"
        android:textColor="@color/grey_500"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_dialog_type_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/type_image"
        android:textColor="@color/grey_500"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_dialog_type_other"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/type_other"
        android:textColor="@color/grey_500"
        android:textSize="16sp" />
</LinearLayout>